[project]
name = "rag-prod-app"
version = "0.1.0"
description = "This is RAG web application in which we utilised gemini-2.5-flash model so that you can upload an pdf document and can ask questions related to it and you will get those answers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
